# simulador-circuitos-malla

./: MEJORAS_POR_FASES.md  README.md  app.py  pyproject.toml
src/: app_factory.py
src/routes/: api.py  web.py
src/services/: circuit_renderer.py  mesh_analyzer.py  usage_metrics.py
static/: main.js  styles.css
templates/: index.html
tests/: test_api.py
